# roletrando

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  docker-compose.prod.yml  prefect.yaml  pyproject.toml  start-prefect.sh
.claude/specs/: db-spec.md  flow-spec.md
.devcontainer/: Dockerfile  devcontainer.json
flows/: binance_ohlc.py  binance_ohlc_5m.py  currency_history.py  currency_spot.py  despesas.py  despesas_historico_usd.py  despesas_ingestao.py  despesas_processamento.py  github_stars.py  noticia_flazoeiro_matrix.py  noticias_flazoeiro.py  noticias_flazoeiro_orchestrator.py  oilprice_fred_history.py  oilprice_history.py  oilprice_spot.py  oilprice_widget.py  openweather.py  openweather_forecast.py  openweather_weather.py  resumo_noticias_flazoeiro.py  tuya_weather.py
flows/lib/: db.py
